stateless reader and writer, data format changed